--- a/Machinery_Alpha_2_3/res/layout/activity_machine.xml
+++ b/Machinery_Alpha_2_3/res/layout/activity_machine.xml
@@ -4,18 +4,96 @@
     android:layout_height="match_parent" >
     
     <TextView
-        android:id="@+id/MAedittext1"
+        android:id="@+id/MAtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/search"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingLeft="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="5dp"
+        android:hint="Model Name Error" />
+
+    <TextView
+        android:id="@+id/MAinfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:hint="Purchase, Year, Grease, Service Error"
+        android:layout_below="@id/MAtitle"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
         android:focusable="true" />
+    
+    <TextView
+        android:id="@+id/MAconsumables"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:hint="Consumables Error"
+        android:layout_below="@id/MAinfo"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:focusable="true" />    
+
+    <TextView
+        android:id="@+id/MAmaintenancetag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Maintenance History"
+        android:gravity="center"
+        android:layout_below="@id/MAconsumables"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:focusable="true" />   
+    
+	<ListView
+        android:id="@+id/MAlistview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:layout_below="@id/MAmaintenancetag"
+        android:layout_above="@+id/MAnote"
+        android:focusable="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" >
+    </ListView>	    
 
     <Button
-        android:id="@+id/MAbackbutton"
-        android:layout_width="match_parent"
+        android:id="@+id/MAnote"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/MAedittext1"
-        android:text="Back" />
+        android:layout_alignParentBottom="true"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:text="Note" />
+    
+    <Button
+        android:id="@+id/MAservice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/MAnote"
+        android:layout_alignParentBottom="true"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:text="Service" />
+    
 
+    <Button
+        android:id="@+id/MAmaintenance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/MAservice"
+        android:layout_alignParentBottom="true"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:text="Maintenance" />
+    
+	<Button
+        android:id="@+id/MAbackbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/MAmaintenance"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:text="Back" />
+	
 </RelativeLayout>
