Updated 2.5/3.0 with MaintenanceTables and Machine Activity
Added an updating maintenance table for each Machine, the Machine
activity itself, and passing of information to the Machine Activity.
Also edited Row Displays to improve space use.  MachineActivity is not
yet editable, and Maintenance List does not yet display.

--- a/Machinary_Alpha_2_5/res/layout/row_item_1.xml
+++ b/Machinary_Alpha_2_5/res/layout/row_item_1.xml
@@ -37,6 +37,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/name"
         android:gravity="center_vertical"
+        android:minHeight="0dp"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -48,6 +49,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/line1"
         android:gravity="center_vertical"
+        android:minHeight="0dp"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -59,6 +61,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/line2"
         android:gravity="center_vertical"
+        android:minHeight="0dp"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
